[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lens-debug"
version = "1.2.0"
description = "Lens - send debug payloads to the Lens desktop app and Lens Cloud"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "LensApp", email = "hello@lensapp.eu" }]
keywords = ["debug", "debugging", "dump", "developer-tools", "lens"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
]
dependencies = []

[project.urls]
Homepage = "https://lens.lensapp.eu"
Source = "https://github.com/lensapp-eu/lens-python"

[tool.setuptools]
packages = ["lens_debug"]
